[package]
name = "ut-dialog"
version = "0.1.0"
authors = ["hyarsan"]
edition = "2018"

description = "A work-in-progress Undertale dialog box generator library"
repository = "https://github.com/hyarsan/ut-dialog"
readme = "README.md"
keywords = ["image", "generator", "undertale"]
categories = ["multimedia::images"]
license = "GPL-3.0-or-later"

[lib]
name = "ut_dialog"
path = "src/lib.rs"

[[bin]]
name = "test_dialog"
path = "src/bin.rs"

[dependencies]
image = "0.20.1"
imageproc = "0.17.0"
serde = "1.0.82"
